--- a/package.json
+++ b/package.json
@@ -40,7 +40,6 @@
     "@storybook/addon-storysource": "^5.2.8",
     "@storybook/addons": "^5.2.8",
     "@storybook/react": "^5.2.8",
-    "prettier": "^1.19.1",
-    "webpack": "^4.41.2"
+    "prettier": "^1.19.1"
   }
 }
